[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "plaidcloud-config"

version = "0.1.51"

authors = [
    {name = "Garrett Bates", email = "garrett.bates@tartansolutions.com"},
    {name = "Michael Rea", email = "mike@plaidcloud.com"},
    {name = "Paul Morel", email = "paul@plaidcloud.com"},
]
maintainers = [
    {name = "Michael Rea", email = "mike@plaidcloud.com"},
    {name = "Paul Morel", email = "paul@plaidcloud.com"},
    {name = "Pat Buxton", email = "pat@plaidcloud.com"},
    {name = "Charlie Laymon", email = "charlie@plaidcloud.com"},
    {name = "Simon Moscrop", email = "simon@plaidcloud.com"},
]
description = "Basic utility to parse a configuration for PlaidCloud application stack."
requires-python = ">=3.10"
keywords = ["plaidcloud", "configuration", "config"]
license = "Apache-2.0"
#license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = ["pyyaml"]
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools_scm]
root = ".."
relative_to = "pyproject.toml"

[project.urls]
Homepage = "https://plaidcloud.com"
Documentation = "https://docs.plaidcloud.com"
Repository = "https://github.com/PlaidCloud/plaidcloud-config.git"
Issues = "https://github.com/PlaidCloud/plaidcloud-config/issues"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 125
target-version = ['py312']
skip-string-normalization = true